--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.lwjgl.jar=lwjgl/doc/javadoc.zip
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -70,5 +71,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.lwjgl.jar=lwjgl/src.zip
 src.dir=src
 test.src.dir=test
